# raspiberry-peripherals

./: Cargo.toml  README.md
src/: addr.rs  console.rs  gpio.rs  lib.rs  mailboxes.rs  mini_uart.rs
src/boards/: raspi3.rs  raspi4.rs
