[package]
name = "raspiberry-peripherals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"

[features]
raspi3 = []
# This requires allocating a 64K consecutive memory block.
raspi4 = []
